--- a/.github/workflows/mergedPRs.yml
+++ b/.github/workflows/mergedPRs.yml
@@ -2,7 +2,7 @@ name: list-merged-pull-requests example
 on:
   pull_request:
     types: [opened, synchronize]
-    branches: [main]
+    branches: [main, dev]
 jobs:
   example:
     name: Release management comment
