--- a/.github/workflows/mergedPRs.yml
+++ b/.github/workflows/mergedPRs.yml
@@ -1,8 +1,10 @@
-name: list-merged-pull-requests example
+name: List Merged PRs
 on:
   pull_request:
     types: [opened, synchronize]
-    branches: [main, dev]
+    branches: 
+      - main
+      - dev
 jobs:
   example:
     name: Release management comment
